@@ -1,3 +1,7 @@
+2014-06-07  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Removing direct includes of MathUtils.hh and others from analysis code files.
+
 2014-06-02  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Rivet 2.1.2 release!
